remover the "quiz reminder" claass code

--- a/app/src/main/res/layout/activity_quiz_reminder.xml
+++ b/app/src/main/res/layout/activity_quiz_reminder.xml
@@ -13,7 +13,7 @@
         android:textSize="32sp"
         android:textAlignment="center"
         android:layout_alignParentEnd="true"
-        android:textColor="#111"
+        android:textColor="#706a6a"
         android:textStyle="bold"/>
 
 
