--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +15,9 @@
         android:layout_gravity="center"
         android:textColor="#cc1e11"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="39dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 
     <ImageView
@@ -23,30 +25,22 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:srcCompat="@drawable/manager"
-        android:layout_marginTop="40dp"/>
-
-    <Button
-        android:id="@+id/btn_enter"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/arrow2" />
+        android:layout_marginTop="81dp"
+        android:layout_below="@+id/titleName"
+        android:layout_centerHorizontal="true" />
 
     <TextView
+        android:id="@+id/textView18"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="Enter"
-        android:textSize="32dp"
-        android:textColor="#ffffff"
+        android:layout_height="50dp"
+        android:background="#fa9837"
+        android:text="AUST CLASS MANAGER"
+        android:textSize="28sp"
+        android:fontFamily="serif-monospace"
+        android:textColor="#000000"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/menu_background"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-
-
-
-</LinearLayout>
+</RelativeLayout>
