--- a/app/src/main/res/layout/activity_quiz_reminder.xml
+++ b/app/src/main/res/layout/activity_quiz_reminder.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textView_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:text="QUIZ REMINDER"
-        android:layout_alignParentTop="true"
+        android:text="Quiz Reminder"
         android:textSize="32sp"
-        android:textAlignment="center"
+        android:gravity="center"
+        android:background="#f79a43"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:padding="10dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#706a6a"
-        android:textStyle="bold"/>
+        android:id="@+id/floating_button"
+        android:layout_margin="16dp"
+        android:src="@drawable/add2"
+        app:fabSize="normal"
+        app:elevation="8dp"
+        app:backgroundTint="@color/colorPrimaryDark"/>
 
 
 </RelativeLayout>
