--- a/app/src/main/res/layout/activity_quiz_reminder.xml
+++ b/app/src/main/res/layout/activity_quiz_reminder.xml
@@ -4,18 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/textView_information"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Quiz Reminder"
-        android:textSize="32sp"
-        android:gravity="center"
-        android:background="#f79a43"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:padding="10dp" />
-
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +16,15 @@
         app:fabSize="normal"
         app:elevation="8dp"
         app:backgroundTint="@color/colorPrimaryDark"/>
+
+    <ListView
+        android:id="@+id/custom_listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView_information"
+        android:layout_alignParentStart="true">
+
+    </ListView>
 
 
 </RelativeLayout>
