--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -28,7 +28,8 @@
            android:src="@drawable/logo_project"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
-           android:contentDescription="AUST Class Manager"/>
+           android:contentDescription="AUST Class Manager"
+           android:id="@+id/header_image"/>
 
        <TextView
            android:id="@+id/header_name"
