--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -2,31 +2,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e9e9e9">
+    android:background="@drawable/setabs3">
 
 
     <TextView
         android:id="@+id/textView25"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
         android:text="Running Class"
-        android:textSize="20sp"
+        android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#2e8950"
-        android:layout_below="@+id/status"
-        android:layout_centerHorizontal="true" />
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+
 
     <TextView
         android:id="@+id/running_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Software Development Lab-III"
+        android:text=""
         android:textSize="22sp"
         android:textColor="#a13030"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/textView25"
         android:layout_centerHorizontal="true" />
 
@@ -34,9 +37,10 @@
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        android:text="Class Room:"
+        android:layout_marginTop="44dp"
+        android:text="Class Room:   "
         android:textSize="18sp"
+        android:textStyle="bold"
         android:textColor="#111"
         android:layout_marginStart="16dp"
         android:layout_below="@+id/running_teacher"
@@ -46,19 +50,20 @@
         android:id="@+id/class_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="7C07"
-        android:textSize="18sp"
+        android:text=""
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="#f50000"
         android:layout_above="@+id/textView29"
-        android:layout_alignStart="@+id/current_schedule" />
+        android:layout_toEndOf="@+id/textView27" />
 
     <TextView
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:text="Class Schedule:"
+        android:layout_marginTop="24dp"
+        android:text="Class Schedule:   "
+        android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#111"
         android:layout_below="@+id/textView27"
@@ -68,124 +73,113 @@
         android:id="@+id/current_schedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10.30-11.20"
-        android:textSize="18sp"
-        android:textColor="#000000"
+        android:text=""
+        android:textSize="24sp"
+        android:textColor="#ff0900"
         android:textStyle="bold"
         android:layout_alignBaseline="@+id/textView29"
         android:layout_alignBottom="@+id/textView29"
-        android:layout_toEndOf="@+id/textView25" />
+        android:layout_toEndOf="@+id/textView29" />
 
-    <TextView
-        android:id="@+id/textView31"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Time Left:"
-        android:textSize="18sp"
-        android:textColor="#111"
-        android:layout_below="@+id/textView29"
-        android:layout_alignStart="@+id/textView29" />
-
-    <TextView
-        android:id="@+id/time_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="21 minutes"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:layout_above="@+id/textView38"
-        android:layout_alignStart="@+id/current_schedule" />
 
     <TextView
         android:id="@+id/textView33"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Next Class"
-        android:textSize="20sp"
-        android:textColor="#2e8950"
+        android:gravity="center"
+        android:textSize="28sp"
+        android:textColor="#000000"
         android:textStyle="bold"
-        android:layout_below="@+id/textView38"
-        android:layout_toEndOf="@+id/textView29"
-        android:layout_marginTop="37dp" />
+        android:layout_above="@+id/next_class"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="13dp" />
 
     <TextView
         android:id="@+id/next_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Digital Electronics and Pulse Techniques"
+        android:text=""
         android:textSize="22sp"
         android:textColor="#a13030"
         android:gravity="center"
         android:textStyle="bold"
-        android:layout_below="@+id/textView33"
+        android:layout_above="@+id/next_teacher"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/running_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Faisal Muhammad Shah"
+        android:text=""
         android:gravity="center"
         android:textSize="20sp"
-        android:textColor="#f68b00"
+        android:textColor="#0b9376"
         android:textStyle="bold"
         android:layout_below="@+id/running_class"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView38"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Next Class Schedule:"
+        android:text="Next Class Schedule:   "
+        android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#111"
-        android:layout_below="@+id/textView31"
-        android:layout_alignStart="@+id/textView31" />
+        android:layout_alignBaseline="@+id/next_schedule"
+        android:layout_alignBottom="@+id/next_schedule"
+        android:layout_alignStart="@+id/textView29" />
 
     <TextView
         android:id="@+id/next_schedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="11.20-12.10"
+        android:text=""
         android:gravity="center"
-        android:textSize="18sp"
-        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textColor="#f40000"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView38"
-        android:layout_alignBottom="@+id/textView38"
-        android:layout_alignStart="@+id/time_left" />
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/current_schedule"
+        android:layout_toEndOf="@+id/textView38" />
 
     <TextView
         android:id="@+id/status"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Closed"
+        android:text="Closed For Today"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="34sp"
         android:fontFamily="serif-monospace"
         android:textColor="#ffe600"
         android:background="#ed5752"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/next_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tahsina Aziz"
+        android:text=""
         android:gravity="center"
         android:textSize="20sp"
-        android:textColor="#f68c02"
+        android:textColor="#0b886d"
         android:textStyle="bold"
         android:fontFamily=""
-        android:layout_below="@+id/next_class"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp" />
+        android:layout_marginBottom="24dp"
+        android:layout_above="@+id/status"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/time_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/running_teacher"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
+        android:text="" />
 
 
 </RelativeLayout>
