--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ECEFF1">
+    android:background="@drawable/setabs3">
 
     <TextView
         android:id="@+id/titleName"
@@ -21,13 +21,13 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/welcome_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         app:srcCompat="@drawable/manager"
-        android:layout_marginTop="81dp"
-        android:layout_below="@+id/titleName"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="110dp" />
 
 
 </RelativeLayout>
