--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/setabs3">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -20,9 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Student's Information"
-        android:textSize="32sp"
+        android:textSize="26sp"
         android:gravity="center"
-        android:background="#f1f742"
+        android:fontFamily="casual"
+        android:background="@drawable/customshape"
         android:textColor="#000000"
         android:textStyle="bold"
         android:padding="10dp" />
