--- a/app/src/main/res/layout/activity_set_quiz.xml
+++ b/app/src/main/res/layout/activity_set_quiz.xml
@@ -13,33 +13,21 @@
     </android.support.v7.widget.Toolbar>
 
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="Add Quiz"
-        android:background="#306fcc"
-        android:textSize="26sp"
-        android:textColor="#ffffff"
-        android:padding="5dp"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignParentStart="true" />
+
 
     <EditText
         android:id="@+id/quiz_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Quiz Title"
         android:textAlignment="center"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true"
         android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="95dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/quiz_details"
@@ -59,11 +47,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Time &amp; Date"
-        android:background="#4778f6"
+        android:background="@drawable/customshape"
         android:padding="10dp"
-        android:textSize="14sp"
+        android:fontFamily="casual"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#fff"
+        android:textColor="#000000"
         android:layout_below="@+id/quiz_details"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp" />
@@ -74,10 +63,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Save"
-        android:background="#b952a5"
+        android:fontFamily="casual"
+        android:background="@drawable/customshape"
         android:textStyle="bold"
         android:textSize="26sp"
-        android:textColor="#fff"
+        android:textColor="#030303"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
@@ -85,14 +75,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
         android:textColor="#ff4141"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="47dp"
         android:text="Date:"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:layout_below="@+id/add_time"
-        android:layout_toStartOf="@+id/add_time" />
+        android:layout_alignStart="@+id/quiz_details" />
 
     <TextView
         android:id="@+id/textView7"
@@ -102,7 +91,7 @@
         android:text="Time:"
         android:textColor="#ff0404"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:layout_below="@+id/textView6"
         android:layout_alignStart="@+id/textView6" />
 
@@ -111,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="15-7-2017"
-        android:textSize="22sp"
+        android:textSize="28sp"
         android:textColor="#007c23"
         android:textStyle="bold"
         android:layout_above="@+id/textView7"
@@ -126,6 +115,21 @@
         android:textStyle="bold"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignStart="@+id/show_date"
-        android:textSize="22sp"/>
+        android:textSize="26sp"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="27dp"
+        android:gravity="center"
+        android:fontFamily="monospace"
+        android:text="Add Quiz Title and Quiz Details"
+        android:textSize="22sp"
+        android:textColor="#bd3939"
+        android:textStyle="bold"
+
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
