--- a/app/src/main/res/layout/activity_menu_layout.xml
+++ b/app/src/main/res/layout/activity_menu_layout.xml
@@ -115,7 +115,7 @@
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="    Results \n       and \nInformation"
+        android:text="Information"
         android:textSize="18sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
